# Admin

./: .gitignore  README.md  commands.py  manage.py  pyproject.toml  pytest.ini  test_simple.py
Admin/: asgi.py  urls.py  wsgi.py
bots/: celery_tasks.py  consumers.py  routing.py  urls.py  views.py
chat/: urls.py  views.py
settings/: base_settings.py  product_settings.py
start/: celery_beat.sh  celery_flower.sh  celery_worker.sh  start.sh  uwsgi.ini
task/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_auto_20210405_1828.py  0003_auto_20210405_1833.py  0004_auto_20210405_1838.py
templates/chat/: index.html  room.html
templates/search/: search.html
templates/search/indexes/user/: usermodel_text.txt
thrift_demo/client/: client.py
thrift_demo/example/: constants.py  format_data-remote  format_data.py  ttypes.py
thrift_demo/server/: server.py
thrift_demo/thrift_file/: example.thrift
user/: admin.py  apps.py  celery_tasks.py  filters.py  models.py  search_indexes.py  serializers.py  signals.py  tests.py  urls.py  validation.py  views.py
user/management/commands/: __init__.py  hello_world.py
user/migrations/: 0001_initial.py  0002_websitevisit.py  0003_auto_20210202_0804.py  0004_auto_20210313_2253.py  0005_test.py  0006_delete_test.py  0007_manufacturer_product.py  0008_auto_20210413_1754.py
utils/: async_practice.py  bloom_filter.py  celery_app.py  celery_tasks.py  design_mode.py  dingding.py  error_code.py  exception.py  middleware.py  model.py  numpy_practice.py  response.py  suanfa.py  validation.py
utils/app_template/: urls.py-tpl  views.py-tpl
utils/designmode/: abstract_factory.py
utils/management/commands/: _test.py  startapp.py
