[tool.poetry]
name = "djproject"
version = "0.1.0"
description = ""
authors = ["wangdong <dong.wang3@bluefocus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
mysqlclient = "^2.0.3"
pydantic = "^1.7.3"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
