[tool.poetry]
name = "djproject"
version = "0.1.0"
description = ""
authors = ["wangdong <dong.wang3@bluefocus.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.5"
mysqlclient = "^2.0.3"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
djangorestframework = "^3.12.2"
celery = "^5.0.5"
redis = "^3.5.3"
thrift = "^0.13.0"
itchat = "^1.3.10"
pygorithm = "^1.0.4"
mycli = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
