[tool.poetry]
name = "djproject"
version = "0.1.0"
description = ""
authors = ["wangdong <dong.wang3@bluefocus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
mysqlclient = "^2.0.3"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
djangorestframework = "^3.12.2"
redis = "^3.5.3"
thrift = "^0.13.0"
itchat = "^1.3.10"
pygorithm = "^1.0.4"
mycli = "^1.23.2"
numpy = "^1.20.0"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
pandas = "^1.2.1"
djangorestframework-simplejwt = "^4.6.0"
django-secret-key = "^1.0.1"
DingtalkChatbot = "^1.5.2"
sentry-sdk = "^1.0.0"
django-redis = "^4.12.1"
flower = "^0.9.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
